compiler/src/test/resources/golden/errors/lex_bad_escape.dawn
pub fn main() -> Unit !io =
  println("a\qb")
