compiler/src/test/resources/golden/errors/lex_bad_escape.err
error: unknown escape: \q
  --> lex_bad_escape.dawn:2:13
  |
2 |   println("a\qb")
  |             ^^
error: expected an expression, found `<eof>`
  --> lex_bad_escape.dawn:3:1
  |
3 | 
  | ^
